<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:foreground="?attr/selectableItemBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/nameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/pokemon_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/nameLabel"
            app:layout_constraintStart_toEndOf="@+id/nameLabel"
            tools:text="@sample/pokemon.json/data/name" />

        <TextView
            android:id="@+id/hpLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pokemon_hp"
            app:layout_constraintStart_toStartOf="@+id/nameLabel"
            app:layout_constraintTop_toBottomOf="@+id/nameLabel" />

        <TextView
            android:id="@+id/hpTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/hpLabel"
            app:layout_constraintStart_toEndOf="@+id/hpLabel"
            tools:text="@sample/pokemon.json/data/hp" />

        <TextView
            android:id="@+id/attachLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pokemon_attack"
            app:layout_constraintStart_toStartOf="@+id/nameLabel"
            app:layout_constraintTop_toBottomOf="@+id/hpLabel" />

        <TextView
            android:id="@+id/attackTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/attachLabel"
            app:layout_constraintStart_toEndOf="@+id/attachLabel"
            tools:text="@sample/pokemon.json/data/attack" />

        <TextView
            android:id="@+id/defenseLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pokemon_defense"
            app:layout_constraintStart_toStartOf="@+id/nameLabel"
            app:layout_constraintTop_toBottomOf="@+id/attachLabel" />

        <TextView
            android:id="@+id/defenseTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/defenseLabel"
            app:layout_constraintStart_toEndOf="@+id/defenseLabel"
            tools:text="@sample/pokemon.json/data/defense" />

        <ImageView
            android:id="@+id/pokeballImageView"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintBottom_toBottomOf="@+id/defenseLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/nameLabel"
            app:tint="?android:textColor"
            tools:ignore="ContentDescription"
            tools:src="@drawable/ic_pokeball_empty" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>